<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background3">
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20dp"/>

    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10dp"
        android:textSize="20dp"
        android:textColor="@android:color/holo_red_dark"/>
    
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/createimg1234"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="20dp"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="20dp"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="20dp"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fourth"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="20dp"/>
   <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guid"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
        android:textColor="@android:color/holo_red_dark"/>
   <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mamname"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="70dp"
        android:textSize="20dp"/>
    
    
    

</LinearLayout>
